// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#parse 1`] = `
Object {
  "fonts": Object {},
  "props": Object {},
  "views": Array [
    Object {
      "blocks": Object {
        "list": Array [],
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 0,
          },
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "type": "Blocks",
      },
      "is": "Main",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 12,
          "line": 0,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": Object {
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 0,
          },
          "start": Object {
            "column": 0,
            "line": 0,
          },
        },
        "type": "Literal",
        "value": "Vertical",
      },
      "scoped": Object {},
      "type": "Block",
    },
  ],
}
`;

exports[`#parse 2`] = `
Object {
  "fonts": Object {},
  "props": Object {},
  "views": Array [
    Object {
      "blocks": Object {
        "list": Array [
          Object {
            "isBasic": true,
            "isGroup": false,
            "loc": Object {
              "end": Object {
                "column": undefined,
                "line": 1,
              },
              "start": Object {
                "column": 0,
                "line": 1,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 3,
                  "line": 1,
                },
                "start": Object {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "Literal",
              "value": "Text",
            },
            "scoped": Object {},
            "type": "Block",
          },
        ],
        "loc": Object {
          "end": Object {
            "column": undefined,
            "line": 1,
          },
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "type": "Blocks",
      },
      "is": "Main",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 3,
          "line": 1,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": Object {
        "loc": Object {
          "end": Object {
            "column": 12,
            "line": 0,
          },
          "start": Object {
            "column": 0,
            "line": 0,
          },
        },
        "type": "Literal",
        "value": "Vertical",
      },
      "scoped": Object {},
      "type": "Block",
    },
  ],
}
`;

exports[`#parse 3`] = `
Object {
  "fonts": Object {},
  "props": Object {},
  "views": Array [
    Object {
      "blocks": Object {
        "list": Array [
          Object {
            "is": "Before",
            "isBasic": true,
            "isGroup": false,
            "loc": Object {
              "end": Object {
                "column": undefined,
                "line": 1,
              },
              "start": Object {
                "column": 0,
                "line": 1,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 1,
                },
                "start": Object {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "Literal",
              "value": "Text",
            },
            "scoped": Object {},
            "type": "Block",
          },
          Object {
            "blocks": Object {
              "list": Array [
                Object {
                  "is": "ImageInside",
                  "isBasic": true,
                  "isGroup": false,
                  "loc": Object {
                    "end": Object {
                      "column": 32,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 3,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 16,
                        "line": 3,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 3,
                      },
                    },
                    "type": "Literal",
                    "value": "Image",
                  },
                  "properties": Object {
                    "list": Array [
                      Object {
                        "inScope": false,
                        "key": Object {
                          "loc": Object {
                            "end": Object {
                              "column": 5,
                              "line": 4,
                            },
                            "start": Object {
                              "column": 0,
                              "line": 4,
                            },
                          },
                          "type": "Literal",
                          "value": "source",
                          "valueRaw": "source",
                        },
                        "loc": Object {
                          "end": Object {
                            "column": 32,
                            "line": 4,
                          },
                          "start": Object {
                            "column": 0,
                            "line": 4,
                          },
                        },
                        "meta": Array [],
                        "tags": Object {},
                        "type": "Property",
                        "value": Object {
                          "loc": Object {
                            "end": Object {
                              "column": 32,
                              "line": 4,
                            },
                            "start": Object {
                              "column": 7,
                              "line": 4,
                            },
                          },
                          "type": "Literal",
                          "value": "https://image.com/file.jpg",
                        },
                      },
                    ],
                    "loc": Object {
                      "end": Object {
                        "column": 32,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 4,
                      },
                    },
                    "type": "Properties",
                  },
                  "scoped": Object {},
                  "type": "Block",
                },
                Object {
                  "blocks": Object {
                    "list": Array [],
                    "loc": Object {
                      "end": Object {
                        "column": 0,
                        "line": 6,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 6,
                      },
                    },
                    "type": "Blocks",
                  },
                  "is": "VerticalInside",
                  "isBasic": true,
                  "isGroup": true,
                  "isList": false,
                  "loc": Object {
                    "end": Object {
                      "column": 0,
                      "line": 6,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 5,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 22,
                        "line": 5,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 5,
                      },
                    },
                    "type": "Literal",
                    "value": "Vertical",
                  },
                  "scoped": Object {},
                  "type": "Block",
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 0,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "type": "Blocks",
            },
            "is": "Nested",
            "isBasic": true,
            "isGroup": true,
            "isList": false,
            "loc": Object {
              "end": Object {
                "column": 0,
                "line": 7,
              },
              "start": Object {
                "column": 0,
                "line": 2,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 2,
                },
                "start": Object {
                  "column": 0,
                  "line": 2,
                },
              },
              "type": "Literal",
              "value": "Vertical",
            },
            "scoped": Object {},
            "type": "Block",
          },
          Object {
            "is": "After",
            "isBasic": true,
            "isGroup": false,
            "loc": Object {
              "end": Object {
                "column": 11,
                "line": 10,
              },
              "start": Object {
                "column": 0,
                "line": 8,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 8,
                },
                "start": Object {
                  "column": 0,
                  "line": 8,
                },
              },
              "type": "Literal",
              "value": "Text",
            },
            "properties": Object {
              "list": Array [
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 3,
                        "line": 9,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 9,
                      },
                    },
                    "type": "Literal",
                    "value": "text",
                    "valueRaw": "text",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 9,
                      "line": 9,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 9,
                    },
                  },
                  "meta": Array [],
                  "tags": Object {},
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 9,
                        "line": 9,
                      },
                      "start": Object {
                        "column": 5,
                        "line": 9,
                      },
                    },
                    "type": "Literal",
                    "value": "after",
                  },
                },
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 4,
                        "line": 10,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 10,
                      },
                    },
                    "type": "Literal",
                    "value": "color",
                    "valueRaw": "color",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 11,
                      "line": 10,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 10,
                    },
                  },
                  "meta": Array [],
                  "tags": Object {
                    "style": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 11,
                        "line": 10,
                      },
                      "start": Object {
                        "column": 6,
                        "line": 10,
                      },
                    },
                    "type": "Literal",
                    "value": "purple",
                  },
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 11,
                  "line": 10,
                },
                "start": Object {
                  "column": 0,
                  "line": 9,
                },
              },
              "type": "Properties",
            },
            "scoped": Object {},
            "type": "Block",
          },
          Object {
            "blocks": Object {
              "list": Array [],
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 12,
                },
                "start": Object {
                  "column": 0,
                  "line": 12,
                },
              },
              "type": "Blocks",
            },
            "is": "Last",
            "isBasic": true,
            "isGroup": true,
            "isList": false,
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 12,
              },
              "start": Object {
                "column": 0,
                "line": 11,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 12,
                  "line": 11,
                },
                "start": Object {
                  "column": 0,
                  "line": 11,
                },
              },
              "type": "Literal",
              "value": "Vertical",
            },
            "properties": Object {
              "list": Array [
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 14,
                        "line": 12,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 12,
                      },
                    },
                    "type": "Literal",
                    "value": "backgroundColor",
                    "valueRaw": "backgroundColor",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 12,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 12,
                    },
                  },
                  "meta": Array [],
                  "tags": Object {
                    "style": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 19,
                        "line": 12,
                      },
                      "start": Object {
                        "column": 16,
                        "line": 12,
                      },
                    },
                    "type": "Literal",
                    "value": "blue",
                  },
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 12,
                },
                "start": Object {
                  "column": 0,
                  "line": 12,
                },
              },
              "type": "Properties",
            },
            "scoped": Object {},
            "type": "Block",
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 19,
            "line": 12,
          },
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "type": "Blocks",
      },
      "is": "BlueButton",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 19,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": Object {
        "loc": Object {
          "end": Object {
            "column": 18,
            "line": 0,
          },
          "start": Object {
            "column": 0,
            "line": 0,
          },
        },
        "type": "Literal",
        "value": "Vertical",
      },
      "scoped": Object {},
      "type": "Block",
    },
  ],
}
`;

exports[`#parse 4`] = `
Object {
  "fonts": Object {},
  "props": Object {},
  "views": Array [
    Object {
      "blocks": Object {
        "list": Array [
          Object {
            "is": "A1",
            "isBasic": true,
            "isGroup": false,
            "loc": Object {
              "end": Object {
                "column": 8,
                "line": 2,
              },
              "start": Object {
                "column": 0,
                "line": 1,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 1,
                },
                "start": Object {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "Literal",
              "value": "Text",
            },
            "properties": Object {
              "list": Array [
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 4,
                        "line": 2,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 2,
                      },
                    },
                    "type": "Literal",
                    "value": "color",
                    "valueRaw": "color",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 8,
                      "line": 2,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 2,
                    },
                  },
                  "meta": Array [],
                  "tags": Object {
                    "style": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 8,
                        "line": 2,
                      },
                      "start": Object {
                        "column": 6,
                        "line": 2,
                      },
                    },
                    "type": "Literal",
                    "value": "red",
                  },
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 8,
                  "line": 2,
                },
                "start": Object {
                  "column": 0,
                  "line": 2,
                },
              },
              "type": "Properties",
            },
            "scoped": Object {},
            "type": "Block",
          },
          Object {
            "is": "A2",
            "isBasic": true,
            "isGroup": false,
            "loc": Object {
              "end": Object {
                "column": 10,
                "line": 4,
              },
              "start": Object {
                "column": 0,
                "line": 3,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "type": "Literal",
              "value": "Text",
            },
            "properties": Object {
              "list": Array [
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 4,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 4,
                      },
                    },
                    "type": "Literal",
                    "value": "color",
                    "valueRaw": "color",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 10,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 4,
                    },
                  },
                  "meta": Array [],
                  "tags": Object {
                    "style": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 10,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 6,
                        "line": 4,
                      },
                    },
                    "type": "Literal",
                    "value": "white",
                  },
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 4,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "type": "Properties",
            },
            "scoped": Object {},
            "type": "Block",
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 10,
            "line": 4,
          },
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "type": "Blocks",
      },
      "is": "A",
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 10,
          "line": 4,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "name": Object {
        "loc": Object {
          "end": Object {
            "column": 9,
            "line": 0,
          },
          "start": Object {
            "column": 0,
            "line": 0,
          },
        },
        "type": "Literal",
        "value": "Vertical",
      },
      "scoped": Object {},
      "type": "Block",
    },
  ],
}
`;

exports[`#parse 5`] = `
Object {
  "fonts": Object {},
  "props": Object {
    "backgroundColor": "string",
    "marginLeft": "number",
    "name": "function",
    "onClick": "function",
    "onFocus": "function",
    "some": Object {
      "shape": Object {
        "prop": "string",
        "thing": "string",
      },
      "type": "object",
    },
    "stuff": "string",
  },
  "views": Array [
    Object {
      "blocks": Object {
        "list": Array [
          Object {
            "is": "Title",
            "isBasic": true,
            "isGroup": false,
            "loc": Object {
              "end": Object {
                "column": 19,
                "line": 6,
              },
              "start": Object {
                "column": 0,
                "line": 3,
              },
            },
            "maybeAnimated": true,
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 9,
                  "line": 3,
                },
                "start": Object {
                  "column": 0,
                  "line": 3,
                },
              },
              "type": "Literal",
              "value": "Text",
            },
            "properties": Object {
              "list": Array [
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 4,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 4,
                      },
                    },
                    "type": "Literal",
                    "value": "color",
                    "valueRaw": "color",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 30,
                      "line": 4,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 4,
                    },
                  },
                  "meta": Array [
                    Object {
                      "tag": "code",
                      "value": "props.some.thing",
                    },
                  ],
                  "tags": Object {
                    "code": true,
                    "style": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 30,
                        "line": 4,
                      },
                      "start": Object {
                        "column": 6,
                        "line": 4,
                      },
                    },
                    "type": "Literal",
                    "value": "props.some.thing || 'red'",
                  },
                },
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 9,
                        "line": 5,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 5,
                      },
                    },
                    "type": "Literal",
                    "value": "marginLeft",
                    "valueRaw": "marginLeft",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 26,
                      "line": 5,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 5,
                    },
                  },
                  "meta": Array [
                    Object {
                      "tag": "code",
                      "value": "props.marginLeft",
                    },
                  ],
                  "tags": Object {
                    "code": true,
                    "style": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 26,
                        "line": 5,
                      },
                      "start": Object {
                        "column": 11,
                        "line": 5,
                      },
                    },
                    "type": "Literal",
                    "value": "props.marginLeft",
                  },
                },
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 3,
                        "line": 6,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 6,
                      },
                    },
                    "type": "Literal",
                    "value": "text",
                    "valueRaw": "text",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 19,
                      "line": 6,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 6,
                    },
                  },
                  "meta": Array [
                    Object {
                      "tag": "code",
                      "value": "props.some.prop",
                    },
                  ],
                  "tags": Object {
                    "code": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 19,
                        "line": 6,
                      },
                      "start": Object {
                        "column": 5,
                        "line": 6,
                      },
                    },
                    "type": "Literal",
                    "value": "props.some.prop",
                  },
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 19,
                  "line": 6,
                },
                "start": Object {
                  "column": 0,
                  "line": 4,
                },
              },
              "type": "Properties",
            },
            "scoped": Object {},
            "type": "Block",
          },
          Object {
            "isBasic": true,
            "isGroup": false,
            "loc": Object {
              "end": Object {
                "column": 20,
                "line": 8,
              },
              "start": Object {
                "column": 0,
                "line": 7,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 10,
                  "line": 7,
                },
                "start": Object {
                  "column": 0,
                  "line": 7,
                },
              },
              "type": "Literal",
              "value": "CaptureText",
            },
            "properties": Object {
              "list": Array [
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 6,
                        "line": 8,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 8,
                      },
                    },
                    "type": "Literal",
                    "value": "onFocus",
                    "valueRaw": "onFocus",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 20,
                      "line": 8,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 8,
                    },
                  },
                  "meta": Array [
                    Object {
                      "tag": "code",
                      "value": "props.onFocus",
                    },
                  ],
                  "tags": Object {
                    "code": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 20,
                        "line": 8,
                      },
                      "start": Object {
                        "column": 8,
                        "line": 8,
                      },
                    },
                    "type": "Literal",
                    "value": "props.onFocus",
                  },
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 20,
                  "line": 8,
                },
                "start": Object {
                  "column": 0,
                  "line": 8,
                },
              },
              "type": "Properties",
            },
            "scoped": Object {},
            "type": "Block",
          },
          Object {
            "blocks": Object {
              "list": Array [
                Object {
                  "blocks": Object {
                    "list": Array [],
                    "loc": Object {
                      "end": Object {
                        "column": 4,
                        "line": 12,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 13,
                      },
                    },
                    "type": "Blocks",
                  },
                  "childrenProxyMap": null,
                  "isBasic": false,
                  "isGroup": true,
                  "isList": false,
                  "loc": Object {
                    "end": Object {
                      "column": 4,
                      "line": 12,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 12,
                    },
                  },
                  "name": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 4,
                        "line": 12,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 12,
                      },
                    },
                    "type": "Literal",
                    "value": "Stuff",
                  },
                  "scoped": Object {},
                  "type": "Block",
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 4,
                  "line": 12,
                },
                "start": Object {
                  "column": 0,
                  "line": 10,
                },
              },
              "type": "Blocks",
            },
            "isBasic": true,
            "isGroup": true,
            "isList": true,
            "loc": Object {
              "end": Object {
                "column": 4,
                "line": 12,
              },
              "start": Object {
                "column": 0,
                "line": 9,
              },
            },
            "name": Object {
              "loc": Object {
                "end": Object {
                  "column": 3,
                  "line": 9,
                },
                "start": Object {
                  "column": 0,
                  "line": 9,
                },
              },
              "type": "Literal",
              "value": "List",
            },
            "properties": Object {
              "list": Array [
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 3,
                        "line": 10,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 10,
                      },
                    },
                    "type": "Literal",
                    "value": "from",
                    "valueRaw": "from",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 15,
                      "line": 10,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 10,
                    },
                  },
                  "meta": Array [
                    Object {
                      "tag": "code",
                      "value": "props.stuff",
                    },
                  ],
                  "tags": Object {
                    "code": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 15,
                        "line": 10,
                      },
                      "start": Object {
                        "column": 5,
                        "line": 10,
                      },
                    },
                    "type": "Literal",
                    "value": "props.stuff",
                  },
                },
                Object {
                  "inScope": false,
                  "key": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 3,
                        "line": 11,
                      },
                      "start": Object {
                        "column": 0,
                        "line": 11,
                      },
                    },
                    "type": "Literal",
                    "value": "when",
                    "valueRaw": "when",
                  },
                  "loc": Object {
                    "end": Object {
                      "column": 26,
                      "line": 11,
                    },
                    "start": Object {
                      "column": 0,
                      "line": 11,
                    },
                  },
                  "meta": Array [
                    Object {
                      "tag": "code",
                      "value": "props.stuff.length",
                    },
                  ],
                  "tags": Object {
                    "code": true,
                  },
                  "type": "Property",
                  "value": Object {
                    "loc": Object {
                      "end": Object {
                        "column": 26,
                        "line": 11,
                      },
                      "start": Object {
                        "column": 5,
                        "line": 11,
                      },
                    },
                    "type": "Literal",
                    "value": "props.stuff.length > 0",
                  },
                },
              ],
              "loc": Object {
                "end": Object {
                  "column": 26,
                  "line": 11,
                },
                "start": Object {
                  "column": 0,
                  "line": 10,
                },
              },
              "type": "Properties",
            },
            "scoped": Object {},
            "type": "Block",
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 4,
            "line": 12,
          },
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "type": "Blocks",
      },
      "isBasic": true,
      "isGroup": true,
      "isList": false,
      "loc": Object {
        "end": Object {
          "column": 4,
          "line": 12,
        },
        "start": Object {
          "column": 0,
          "line": 0,
        },
      },
      "maybeAnimated": true,
      "name": Object {
        "loc": Object {
          "end": Object {
            "column": 7,
            "line": 0,
          },
          "start": Object {
            "column": 0,
            "line": 0,
          },
        },
        "type": "Literal",
        "value": "Vertical",
      },
      "properties": Object {
        "list": Array [
          Object {
            "inScope": false,
            "key": Object {
              "loc": Object {
                "end": Object {
                  "column": 14,
                  "line": 1,
                },
                "start": Object {
                  "column": 0,
                  "line": 1,
                },
              },
              "type": "Literal",
              "value": "backgroundColor",
              "valueRaw": "backgroundColor",
            },
            "loc": Object {
              "end": Object {
                "column": 36,
                "line": 1,
              },
              "start": Object {
                "column": 0,
                "line": 1,
              },
            },
            "meta": Array [
              Object {
                "tag": "code",
                "value": "props.backgroundColor",
              },
            ],
            "tags": Object {
              "code": true,
              "style": true,
            },
            "type": "Property",
            "value": Object {
              "loc": Object {
                "end": Object {
                  "column": 36,
                  "line": 1,
                },
                "start": Object {
                  "column": 16,
                  "line": 1,
                },
              },
              "type": "Literal",
              "value": "props.backgroundColor",
            },
          },
          Object {
            "inScope": false,
            "key": Object {
              "loc": Object {
                "end": Object {
                  "column": 6,
                  "line": 2,
                },
                "start": Object {
                  "column": 0,
                  "line": 2,
                },
              },
              "type": "Literal",
              "value": "onClick",
              "valueRaw": "onClick",
            },
            "loc": Object {
              "end": Object {
                "column": 48,
                "line": 2,
              },
              "start": Object {
                "column": 0,
                "line": 2,
              },
            },
            "meta": Array [
              Object {
                "tag": "code",
                "value": "props.onClick(props.name,",
              },
            ],
            "tags": Object {
              "code": true,
            },
            "type": "Property",
            "value": Object {
              "loc": Object {
                "end": Object {
                  "column": 48,
                  "line": 2,
                },
                "start": Object {
                  "column": 8,
                  "line": 2,
                },
              },
              "type": "Literal",
              "value": "event => props.onClick(props.name, event)",
            },
          },
        ],
        "loc": Object {
          "end": Object {
            "column": 48,
            "line": 2,
          },
          "start": Object {
            "column": 0,
            "line": 1,
          },
        },
        "type": "Properties",
      },
      "scoped": Object {},
      "type": "Block",
    },
  ],
}
`;
